shop grid page only responsive need

--- a/buyer-home.html
+++ b/buyer-home.html
@@ -412,8 +412,8 @@
                         </defs>
                         </svg>'>
                         <div class="slider_items">
-                            <div class="img relative">
-                                <img src="./assets/images/featured_product1.png" alt="retailers" class="w-full max-h-[653px]">
+                            <div class="img relative aspect-[2/3] full_image">
+                                <img src="./assets/images/featured_product1.png" alt="retailers" class="w-full">
                                 <div class="love_icon absolute top-[20px] right-[20px] w-[40px] h-[40px] rounded-[50%] bg-[#fff] flex justify-center items-center">
                                     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M10.3493 3.23872L10.3567 3.24516L10.357 3.24542L10.3572 3.24558L10.3576 3.2459L10.3579 3.24618L11.0175 3.83244L11.6803 3.2496L11.6806 3.24934L11.6809 3.24903L11.6812 3.24881L11.6814 3.24861L11.689 3.24205C11.6969 3.23529 11.71 3.22411 11.7281 3.20895C11.7644 3.17861 11.8206 3.13241 11.8947 3.07377C12.0434 2.95631 12.263 2.78996 12.5385 2.60169C13.0941 2.22215 13.8556 1.76828 14.7062 1.44027C15.5617 1.11038 16.4509 0.929547 17.2865 1.02897C18.0925 1.12487 18.9083 1.48681 19.6588 2.35897C20.8901 3.78988 21.1832 5.29997 20.9014 6.85485C20.6104 8.46075 19.6951 10.1484 18.4289 11.7958C16.1515 14.7585 12.9342 17.3444 11.0225 18.7607C9.11136 17.3416 5.87087 14.7652 3.57781 11.8074C2.30255 10.1624 1.38301 8.4777 1.09527 6.87337C0.817059 5.32218 1.11826 3.80791 2.37852 2.36436C3.14413 1.4874 3.96925 1.12376 4.77907 1.02753C5.61748 0.927898 6.50479 1.10897 7.35553 1.43845C8.20181 1.76621 8.95756 2.21977 9.50831 2.59908C9.78151 2.78723 9.99898 2.95345 10.146 3.07078C10.2194 3.12936 10.275 3.17548 10.3108 3.20574C10.3183 3.21209 10.3249 3.21773 10.3306 3.22264C10.3386 3.22943 10.3448 3.23482 10.3493 3.23872Z" stroke="#1F3650" stroke-width="2"/>
@@ -429,8 +429,8 @@
                             </div>
                         </div>
                         <div class="slider_items">
-                            <div class="img relative">
-                                <img src="./assets/images/featured_product2.png" alt="retailers" class="w-full max-h-[653px]">
+                            <div class="img relative aspect-[2/3] full_image">
+                                <img src="./assets/images/featured_product2.png" alt="retailers" class="w-full">
                                 <div class="love_icon absolute top-[20px] right-[20px] w-[40px] h-[40px] rounded-[50%] bg-[#fff] flex justify-center items-center">
                                     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M10.3493 3.23872L10.3567 3.24516L10.357 3.24542L10.3572 3.24558L10.3576 3.2459L10.3579 3.24618L11.0175 3.83244L11.6803 3.2496L11.6806 3.24934L11.6809 3.24903L11.6812 3.24881L11.6814 3.24861L11.689 3.24205C11.6969 3.23529 11.71 3.22411 11.7281 3.20895C11.7644 3.17861 11.8206 3.13241 11.8947 3.07377C12.0434 2.95631 12.263 2.78996 12.5385 2.60169C13.0941 2.22215 13.8556 1.76828 14.7062 1.44027C15.5617 1.11038 16.4509 0.929547 17.2865 1.02897C18.0925 1.12487 18.9083 1.48681 19.6588 2.35897C20.8901 3.78988 21.1832 5.29997 20.9014 6.85485C20.6104 8.46075 19.6951 10.1484 18.4289 11.7958C16.1515 14.7585 12.9342 17.3444 11.0225 18.7607C9.11136 17.3416 5.87087 14.7652 3.57781 11.8074C2.30255 10.1624 1.38301 8.4777 1.09527 6.87337C0.817059 5.32218 1.11826 3.80791 2.37852 2.36436C3.14413 1.4874 3.96925 1.12376 4.77907 1.02753C5.61748 0.927898 6.50479 1.10897 7.35553 1.43845C8.20181 1.76621 8.95756 2.21977 9.50831 2.59908C9.78151 2.78723 9.99898 2.95345 10.146 3.07078C10.2194 3.12936 10.275 3.17548 10.3108 3.20574C10.3183 3.21209 10.3249 3.21773 10.3306 3.22264C10.3386 3.22943 10.3448 3.23482 10.3493 3.23872Z" stroke="#1F3650" stroke-width="2"/>
@@ -446,8 +446,8 @@
                             </div>
                         </div>
                         <div class="slider_items">
-                            <div class="img relative">
-                                <img src="./assets/images/featured_product1.png" alt="retailers" class="w-full max-h-[653px]">
+                            <div class="img relative aspect-[2/3] full_image">
+                                <img src="./assets/images/featured_product1.png" alt="retailers" class="w-full">
                                 <div class="love_icon absolute top-[20px] right-[20px] w-[40px] h-[40px] rounded-[50%] bg-[#fff] flex justify-center items-center">
                                     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M10.3493 3.23872L10.3567 3.24516L10.357 3.24542L10.3572 3.24558L10.3576 3.2459L10.3579 3.24618L11.0175 3.83244L11.6803 3.2496L11.6806 3.24934L11.6809 3.24903L11.6812 3.24881L11.6814 3.24861L11.689 3.24205C11.6969 3.23529 11.71 3.22411 11.7281 3.20895C11.7644 3.17861 11.8206 3.13241 11.8947 3.07377C12.0434 2.95631 12.263 2.78996 12.5385 2.60169C13.0941 2.22215 13.8556 1.76828 14.7062 1.44027C15.5617 1.11038 16.4509 0.929547 17.2865 1.02897C18.0925 1.12487 18.9083 1.48681 19.6588 2.35897C20.8901 3.78988 21.1832 5.29997 20.9014 6.85485C20.6104 8.46075 19.6951 10.1484 18.4289 11.7958C16.1515 14.7585 12.9342 17.3444 11.0225 18.7607C9.11136 17.3416 5.87087 14.7652 3.57781 11.8074C2.30255 10.1624 1.38301 8.4777 1.09527 6.87337C0.817059 5.32218 1.11826 3.80791 2.37852 2.36436C3.14413 1.4874 3.96925 1.12376 4.77907 1.02753C5.61748 0.927898 6.50479 1.10897 7.35553 1.43845C8.20181 1.76621 8.95756 2.21977 9.50831 2.59908C9.78151 2.78723 9.99898 2.95345 10.146 3.07078C10.2194 3.12936 10.275 3.17548 10.3108 3.20574C10.3183 3.21209 10.3249 3.21773 10.3306 3.22264C10.3386 3.22943 10.3448 3.23482 10.3493 3.23872Z" stroke="#1F3650" stroke-width="2"/>
@@ -463,8 +463,8 @@
                             </div>
                         </div>
                         <div class="slider_items">
-                            <div class="img relative">
-                                <img src="./assets/images/featured_product2.png" alt="retailers" class="w-full max-h-[653px]">
+                            <div class="img relative aspect-[2/3] full_image">
+                                <img src="./assets/images/featured_product2.png" alt="retailers" class="w-full">
                                 <div class="love_icon absolute top-[20px] right-[20px] w-[40px] h-[40px] rounded-[50%] bg-[#fff] flex justify-center items-center">
                                     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M10.3493 3.23872L10.3567 3.24516L10.357 3.24542L10.3572 3.24558L10.3576 3.2459L10.3579 3.24618L11.0175 3.83244L11.6803 3.2496L11.6806 3.24934L11.6809 3.24903L11.6812 3.24881L11.6814 3.24861L11.689 3.24205C11.6969 3.23529 11.71 3.22411 11.7281 3.20895C11.7644 3.17861 11.8206 3.13241 11.8947 3.07377C12.0434 2.95631 12.263 2.78996 12.5385 2.60169C13.0941 2.22215 13.8556 1.76828 14.7062 1.44027C15.5617 1.11038 16.4509 0.929547 17.2865 1.02897C18.0925 1.12487 18.9083 1.48681 19.6588 2.35897C20.8901 3.78988 21.1832 5.29997 20.9014 6.85485C20.6104 8.46075 19.6951 10.1484 18.4289 11.7958C16.1515 14.7585 12.9342 17.3444 11.0225 18.7607C9.11136 17.3416 5.87087 14.7652 3.57781 11.8074C2.30255 10.1624 1.38301 8.4777 1.09527 6.87337C0.817059 5.32218 1.11826 3.80791 2.37852 2.36436C3.14413 1.4874 3.96925 1.12376 4.77907 1.02753C5.61748 0.927898 6.50479 1.10897 7.35553 1.43845C8.20181 1.76621 8.95756 2.21977 9.50831 2.59908C9.78151 2.78723 9.99898 2.95345 10.146 3.07078C10.2194 3.12936 10.275 3.17548 10.3108 3.20574C10.3183 3.21209 10.3249 3.21773 10.3306 3.22264C10.3386 3.22943 10.3448 3.23482 10.3493 3.23872Z" stroke="#1F3650" stroke-width="2"/>
